# rover_ws

./: frames_2026-05-20_15.39.04.gv
src/rover_bringup/: package.xml  setup.py
src/rover_bringup/launch/: empty_world.launch.py  rover_gazebo.launch.py
src/rover_bringup/worlds/: generate_terrain.py  sensor_world.sdf  terrain_world.sdf
src/rover_control/: CMakeLists.txt  package.xml
src/rover_control/config/: controllers.yaml
src/rover_description/: CMakeLists.txt  package.xml
src/rover_description/launch/: display.launch.py
src/rover_description/urdf/: rover.urdf.xacro
src/rover_localization/: CMakeLists.txt  package.xml
src/rover_localization/config/: ekf_global.yaml  ekf_local.yaml  navsat_transform.yaml
src/rover_localization/scripts/: gps_covariance_relay.py  ground_truth_tf.py
src/rover_mapping/: package.xml  setup.cfg  setup.py
src/rover_mapping/config/: rover_heatmap.rviz
src/rover_mapping/rover_mapping/: terrain_heatmap_node.py
